# calcul

./: CMakeLists.txt  README.md  ast.h  differentiator.h  evaluator.h  lexer.h  main.cpp  parser.h  simplifier.h  test_runner.cpp
